syntax = "proto3";
package lavanet.lava.subscription;

import "gogoproto/gogo.proto";
import "subscription/params.proto";
import "common/fixationEntry.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/x/subscription/types";

// GenesisState defines the subscription module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated lavanet.lava.common.RawMessage subsFS = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
